# FastFuels-API-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  ruff.toml
services/api/: Dockerfile  pyproject.toml  readme.md
services/api/api/: app.py  auth.py  dependencies.py  main.py  quota.py  schema.py  tasks.py
services/api/api/data/: conus_4326.geojson
services/api/api/db/: README.md  blobs.py  documents.py
services/api/api/resources/: modifications.py
services/api/benchmarks/: .gitignore  bench_inplace_inventory.py
services/api/tests/: conftest.py  fixtures.py  pytest.ini  readme.md  test_cors.py  test_quota.py  test_quota_integration.py  test_tasks.py  test_users_integration.py
services/api/tests/auth/: test_auth.py
services/api/tests/db/: test_blobs_integration.py  test_blobs_unit.py  test_documents_integration.py  test_documents_unit.py
services/api/tests/e2e/: README.md  conftest.py  test_create_fixtures.py
services/api/tests/resources/: test_modifications.py
services/etcher/: Dockerfile  README.md  infrastructure-runbook.md  pyproject.toml
services/etcher/etcher/: dispatch.py  main.py  osm_source.py  storage.py
services/etcher/etcher/handlers/: road.py  water.py
services/etcher/tests/: test_dispatch.py  test_main.py
services/etcher/tests/handlers/: test_osm_source.py  test_road.py  test_water.py
services/etcher/tests/integration/: conftest.py  test_main.py
services/exporter/: Dockerfile  README.md  pyproject.toml
services/exporter/exporter/: __init__.py  dispatch.py  errors.py  filename.py  main.py  storage.py
services/exporter/exporter/handlers/: geotiff.py  grid.py  inventory.py  landscape.py  netcdf.py  quicfire.py
services/exporter/tests/: conftest.py  test_dispatch.py  test_filename.py
services/exporter/tests/handlers/: test_geotiff.py  test_inventory.py  test_landscape.py  test_netcdf.py  test_quicfire.py  test_zarr.py
services/exporter/tests/integration/: README.md  conftest.py  test_geotiff.py  test_grids.py  test_inventory.py  test_landscape.py  test_quicfire.py
services/feature/: Dockerfile  pyproject.toml
services/feature/feature/: dispatch.py  main.py  storage.py
services/feature/feature/handlers/: road.py  water.py
services/feature/tests/: test_dispatch.py  test_main.py
services/feature/tests/handlers/: test_road.py  test_water.py
services/feature/tests/integration/: conftest.py  test_main.py
services/griddle/: Dockerfile  GRIDDLE.md  README.md  pyproject.toml
services/griddle/griddle/: __init__.py  dispatch.py  errors.py  main.py  modifications.py  storage.py  summarize.py  utils.py
services/griddle/griddle/data/: fbfm13_lookup.csv  sb40_fbfm40.csv
services/griddle/griddle/handlers/: __init__.py  chm.py  compose.py  landfire.py  layerset.py  lookup.py  pim.py  resample.py  threedep.py  tiles.py  uniform.py
services/griddle/tests/: __init__.py  conftest.py  test_dispatch.py  test_main.py  test_summerize.py  test_utils.py
services/griddle/tests/handlers/: __init__.py  test_alignment_handlers.py  test_chm.py  test_compose.py  test_landfire.py  test_layerset.py  test_lookup.py  test_modifications.py  test_pim.py  test_resample.py  test_threedep.py  test_uniform.py  test_verify_alignment.py
services/griddle/tests/integration/: README.md  conftest.py  test_alignment.py  test_chm.py  test_landfire.py  test_layerset.py  test_lookup.py  test_modifications.py  test_pim.py  test_resample.py  test_threedep.py  test_uniform.py
services/lib/: README.md  pyproject.toml
services/lib/lib/: __init__.py  alignment.py  cf_utils.py  config.py  crs.py  domain_utils.py  errors.py  fuel_models.py  grids.py  inventory.py  raster.py  testing.py  threedep.py  units.py  zarr_utils.py
services/lib/lib/firestore/: README.md  __init__.py  documents.py  serializers.py
services/lib/lib/gcs/: README.md  __init__.py  blobs.py  signed_urls.py
services/lib/tests/: test_alignment.py  test_crs.py  test_domain_utils.py  test_fuel_models.py  test_gcs_blobs.py  test_grids.py  test_raster.py  test_threedep.py  test_units.py  test_zarr_utils.py
services/lib/tests/integration/: test_domain_utils.py
services/standgen/: Dockerfile  pyproject.toml
services/standgen/standgen/: __init__.py  columns.py  config.py  dispatch.py  errors.py  main.py  modifications.py  storage.py  summarize.py  treatments.py
services/standgen/standgen/data/: fia_species_groups.csv
services/standgen/standgen/handlers/: __init__.py  chm.py  gdam.py  modifications.py  pim.py  treatments.py  utils.py
services/standgen/tests/: conftest.py  test_columns.py  test_dispatch.py  test_main.py  test_modifications.py  test_modifications_dask.py  test_storage.py  test_summarize.py  test_treatments.py
services/standgen/tests/handlers/: conftest.py  test_chm.py  test_gdam.py  test_modifications.py  test_pim.py  test_treatments.py
services/standgen/tests/integration/: conftest.py  test_main.py  test_storage.py
services/treevox/: Dockerfile  README.md  TREEVOX.md  conftest.py  pyproject.toml
services/treevox/scripts/: visualize_tmp_zarr.py
services/treevox/tests/: test_dispatch.py  test_duet_species.py  test_inventory_io.py  test_main.py  test_orchestrator.py  test_storage.py  test_voxelize.py  test_worker.py
services/treevox/tests/handlers/: test_duet.py  test_duet_end_to_end.py  test_voxelize.py
services/treevox/tests/integration/: conftest.py  test_duet_grid.py  test_inventory.py  test_voxelize_inventory.py
services/treevox/treevox/: __init__.py  _worker.py  dispatch.py  duet_species.py  errors.py  firestore_io.py  inventory_io.py  main.py  orchestrator.py  storage.py  voxelize.py
services/uploader/: Dockerfile  UPLOADER.md  pyproject.toml
services/uploader/tests/: pointcloud_helpers.py  test_dispatch.py  test_main.py
services/uploader/uploader/: dispatch.py  main.py
services/walle/: Dockerfile  README.md  pyproject.toml
services/walle/tests/: conftest.py  test_cleanup.py
services/walle/walle/: __init__.py  __main__.py  cleanup.py  config.py  layouts.py
(+476 files in other folders)
