[project]
name = "etcher"
version = "0.1.0"
description = "Feature polygon generation service for FastFuels API v2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "functions-framework>=3.10.1",
    "geopandas>=1.1.3",
    "osmnx>=2.1.0",
    "pyarrow>=18.0.0",
    "lib[firestore,gcs]",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-mock",
    "google-cloud-tasks>=2.14.0",
    "google-cloud-run>=0.10.0",
    "pytest-xdist>=3.5.0",
]

[tool.uv.sources]
lib = { path = "../lib", editable = true }
