[project]
name = "exporter"
version = "0.1.0"
description = "Backend service for V2 export processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "functions-framework>=3.10.0",
    "gcsfs>=2024.1.0",
    "geopandas>=1.0.0",
    "lib[firestore,gcs,zarr]",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "rioxarray>=0.21.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "gcsfs>=2024.1.0",
    "google-cloud-tasks>=2.16.0",
    "google-cloud-run>=0.10.0",
    "pytest-xdist>=3.5.0",
]

[dependency-groups]
dev = [
    "numpy>=2.0.0",
    "pytest>=8.0.0",
    "xarray>=2025.1.0",
]

[tool.uv.sources]
lib = { path = "../lib", editable = true }
