[project]
name = "feature"
version = "0.1.0"
description = "Feature polygon generation service for FastFuels API v2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "functions-framework>=3.10.1",
    "geopandas>=1.1.3",
    "osmnx>=2.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
lib = { path = "../lib", editable = true }
