[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "griddle"
version = "0.1.0"
description = "Grid processing service for FastFuels API v2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "functions-framework>=3.10.0",
    "lib[firestore,gcs,zarr,raster]",
    "pint>=0.24",
    "pytest>=9.0.2",
]

[tool.uv.sources]
lib = { path = "../lib", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["griddle*"]
