[project]
name = "griddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastfuels-core",
    "functions-framework>=3.10.0",
    "lib[firestore,gcs,zarr,raster,threedep]",
    "pint>=0.24",
    "pyarrow>=18.0.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.5.0",
    "google-cloud-tasks>=2.16.0",
    "google-cloud-run>=0.10.0",
]
viz = [
    "matplotlib>=3.10",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring network access (deselect with '-m \"not integration\"')",
]

[tool.uv.sources]
lib = { path = "../lib", editable = true }
