[project]
name = "standgen"
version = "0.1.0"
description = "Tree inventory generation service for FastFuels API v2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "functions-framework>=3.10.0",
    "lib[firestore,gcs,zarr,raster]",
    "fastfuels-core",
    "dask[dataframe]",
    "pandas",
    "numpy",
    "pint>=0.24",
    "pyarrow>=18.0.0",
    "gcsfs",
    "numexpr>=2.14.1",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.5.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-tasks>=2.16.0",
]

[tool.uv.sources]
lib = { path = "../lib", editable = true }
