[project]
name = "uploader"
version = "0.1.0"
description = "Upload processing service for FastFuels API v2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "functions-framework>=3.10.0",
    "lib[firestore,gcs,raster,zarr]",
    "dask[dataframe]>=2024.1.0",
    "geopandas>=1.1.2",
    "h5netcdf[h5py]>=1.8",
    "pandas>=2.0.0",
    "pandera>=0.20.0",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "exporter",
]

[tool.uv.sources]
lib = { path = "../lib", editable = true }
exporter = { path = "../exporter", editable = true }
